<resources>
    <string name="app_name">Yummy Restaurants</string>

    <!-- Profile Data -->
    <string name="profile_toolbar">My Profile</string>
    <string name="editprofile_toolbar">Edit Profile</string>
    <string name="photo_toolbar">Photo Profile</string>
    <string name="save">save</string>
    <string name="next">Next</string>
    <string name="reject">Reject</string>
    <string name="order">Order</string>
    <string name="persona_data">Personal Data</string>

    <string name="imageprofile_desc">Image Profile</string>
    <string name="your_name">Your name</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>

    <string name="default_phone">+39 123 444 5555</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_email">Your Email Address</string>
    <string name="email">Email Address</string>
    <string name="profile_saved">Your profile has been saved!</string>

    <string name="delivery_desc">Your order will be delivered here</string>
    <string name="delivery">Delivery Address</string>
    <string name="road">Road</string>
    <string name="house_number">Number</string>
    <string name="doorphone">Doorphone</string>
    <string name="postalcode">Postal Code</string>
    <string name="city">City</string>
    <string name="desc_desc">A short description about you</string>
    <string name="description">Description</string>

    <string name="max_length_line">60</string>
    <string name="max_length_description">180</string>
    <string name="max_length_phone">15</string>
    <string name="transition_zoom">transition_zoom</string>

    <string name="check_name">First Name not valid</string>
    <string name="check_lastName">Last Name not valid</string>
    <string name="check_phone">Phone Number not valid</string>
    <string name="check_email">Email Address not valid</string>
    <string name="check_road">Street name not valid</string>
    <string name="check_city">City name not valid</string>
    <string name="check_doorphone">Doorphone not valid</string>
    <string name="check_postCode">Postal Code not valid</string>
    <string name="check_houseNumber">House Number not valid</string>
    <string name="check_password">The password must be at least 8 characters long and include a number, lowercase letter, uppercase letter and special character (e.g. @, &amp;, #, ?)</string>
    <string name="check_password_repeat">Repeat same password</string>
    <string name="check_current_password">Invalid current password</string>
    <!--new Dish -->
    <string name="check_name_dish"> Name dish not valid</string>

    <string name="check_time">Time not valid</string>
    <string name="check_availability">Availability not valid</string>
    <string name="check_category">Catergory not valid</string>
    <string name="check_description">Description not valid</string>
    <string name="check_price">Price not valid</string>

    <!-- Navigation -->
    <string name="nav_menu">Menu</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_settings">My Account</string>

    <!-- Orders Fragment -->
    <string name="pending_orders">Pending</string>
    <string name="preparing_orders">Preparing</string>
    <string name="completed_orders">Completed</string>
    <string name="order_number">Order </string>
    <string name="order_requested_at">Delivery: </string>
    <string name="order_from">From: </string>
    <string name="order_pieces_count">Items: </string>
    <string name="order_list">List: </string>
    <string name="order_status">Status: </string>

    <!-- Detail Order Fragment -->
    <string name="user_info_order">Customer</string>
    <string name="detail_order_info">Order Info</string>
    <string name="arrived_at">Arrived:</string>
    <string name="requested_at">Requested for:</string>
    <string name="client_note">Customer Notes</string>
    <string name="products">Products</string>
    <string name="additions">Additions:</string>
    <string name="prefix_products">This order contains</string>
    <string name="suffix_products">products.</string>
    <string name="completing_order">Completing Order</string>

    <!-- Completing Order Activity -->
    <string name="delivery_options">Delivery</string>
    <string name="delivery_opt_sentence">The customer requested the order to be delivered on %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="change">Change</string>
    <string name="admin_notes">Restaurant Notes</string>
    <string name="add">Add</string>
    <string name="changing_status">Change Order Status</string>
    <string name="current_status">Current: </string>
    <string name="changing_status_sentence">Next: </string>
    <string name="confirmed_order">%1$s</string>
    <string name="undo_confirm_order">Undo</string>
    <string name="no_orders">The menu is empty.</string>
    <string name="change_status_button">Change Status</string>
    <string name="delivery_confirm_error">Confirm or change the delivery time!</string>
    no_completed_orders
    <!-- Alert Dialog for "send order" -->
    <string name="completing_order_title_dialog">Confirm Order</string>
    <string name="completing_order_message_dialog">Do you want to confirm the order?</string>
    <string name="rejecting_order_message_dialog">Do you want to REJECT the order?</string>

    <string name="send">Yes</string>
    <string name="cancel">Cancel</string>

    <!--Setting Menu-->
    <string name="setting_profile">My Profile</string>
    <string name="setting_privacy">Change Account Password</string>
    <string name="setting_openinghours">Opening and Closing Time</string>
    <string name="setting_language">Language</string>
    <string name="description_opening_hours">In this section you can add or change the opening/closing hours of your activity. If you want to add a new slot just be sure that it\'s not overlapped (or else you\'ll get an error.</string>
    <string name="title_opening_hours">Instructions</string>
    <string name="days_of_week">Days of the Week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="add_hour_dialog_title">Add Opening Hour</string>
    <string name="add_hour_dialog_message">Chose the day and time in order to add an opening hour</string>

    <!--PasswordActivity-->
    <string name="current_pssw">Current password </string>
    <string name="new_pssw">New password </string>
    <string name="repeat_new_pssw">Repeat new password </string>
    <string name="password_toolbar">Password</string>

    <!--LanguageActivity-->
    <string name="language_toolbar">Language</string>
    <string name="choose_language">Choose language:</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closed">Closed</string>
    <string name="day1">Monday:</string>
    <string name="Delivery_time">Delivery time</string>
    <string name="start_time">Start time</string>
    <string name="Opening_hours">Opening hours</string>
    <string name="opening_hours">Opening hours</string>
    <string name="day2">Tuesday: </string>
    <string name="day3">Wednesday: </string>
    <string name="day4">Thursday: </string>
    <string name="day5">Friday: </string>
    <string name="day6">Saturday: </string>
    <string name="day7">Sunday: </string>
    <string name="list_openinghours">Opening hours</string>
    <string name="saved_password">Your password has been saved</string>

    <string name="name_menu_item">Name dish</string>
    <string name="time_to_preparation">Time needed</string>
    <string name="price">Price</string>
    <string name="priceLabel">Price: </string>

    <string name="category">Category</string>
    <string name="availability">Availability</string>
    <string name="availabilityLabel">Availability:</string>

    <string name="offer">Offers</string>
    <string name="items_in_the_offer">Items in the offer</string>

    <string name="opening_hours_full">Lunedì: chiuso\nMartedì: chiuso\nMercoledì: chiuso\nGiovedì: chiuso\nVenerdì: chiuso\nSabato: chiuso\nDomenica: chiuso\n</string>
    <string name="title_activity_maps">Map</string>
    <string name="setting_popular">Popular</string>
    <string name="most_popular_meals">Most popular meals</string>
    <string name="most_popular_timing_order">Most popular timing order</string>
    <string name="popular_toolbar">Popular</string>


</resources>
