<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/filtertv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/select_categories"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/filtertv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/persona_data"
                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editprofile_userimage"
                android:layout_width="25dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="6dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/photo_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/editprofile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/name"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="46"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                app:layout_constraintBottom_toBottomOf="@+id/editprofile_userimage"
                app:layout_constraintStart_toEndOf="@+id/editprofile_userimage"
                card_view:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/editprofile_phone_image"
                android:layout_width="25dp"
                android:layout_height="45dp"
                android:layout_margin="6dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/phone_number"
                app:srcCompat="@drawable/ic_phone"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/editprofile_userimage" />

            <EditText
                android:id="@+id/editprofile_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/phone_number"
                android:gravity="center_vertical"
                android:hint="@string/default_phone"
                android:inputType="phone"
                android:maxLength="20"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                card_view:layout_constraintEnd_toEndOf="@+id/editprofile_name"
                card_view:layout_constraintStart_toStartOf="@+id/editprofile_name"
                card_view:layout_constraintTop_toBottomOf="@+id/editprofile_name" />


            <ImageView
                android:id="@+id/editprofile_email_image"
                android:layout_width="25dp"
                android:layout_height="45dp"
                android:layout_margin="6dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/email"
                app:srcCompat="@drawable/ic_email"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/editprofile_phone" />

            <EditText
                android:id="@+id/editprofile_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/email"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="45"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="@+id/editprofile_phone"
                card_view:layout_constraintStart_toStartOf="@+id/editprofile_phone"
                card_view:layout_constraintTop_toBottomOf="@+id/editprofile_phone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/delivery"
                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editprofile_location_image"
                android:layout_width="25dp"
                android:layout_height="45dp"
                android:layout_margin="6dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/delivery_desc"
                app:srcCompat="@drawable/ic_location"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/editprofile_road"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/road"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/road"
                android:inputType="textPostalAddress"
                android:maxLength="100"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                card_view:layout_constraintBottom_toBottomOf="@+id/editprofile_location_image"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/editprofile_location_image" />

            <EditText
                android:id="@+id/editprofile_housenumber"
                android:layout_width="104dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/house_number"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/house_number"
                android:inputType="number"
                android:maxLength="5"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                card_view:layout_constraintStart_toStartOf="@+id/editprofile_road"
                card_view:layout_constraintTop_toBottomOf="@+id/editprofile_road" />

            <EditText
                android:id="@+id/editprofile_doorphone"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:autofillHints="@string/doorphone"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/doorphone"
                android:inputType="textShortMessage"
                android:maxLength="20"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                card_view:layout_constraintEnd_toEndOf="@+id/editprofile_road"
                card_view:layout_constraintStart_toEndOf="@+id/editprofile_housenumber"
                card_view:layout_constraintTop_toTopOf="@+id/editprofile_housenumber" />

            <EditText
                android:id="@+id/editprofile_postalcode"
                android:layout_width="125dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/postalcode"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/postalcode"
                android:inputType="number"
                android:maxLength="7"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="@+id/editprofile_housenumber"
                card_view:layout_constraintTop_toBottomOf="@+id/editprofile_housenumber" />

            <EditText
                android:id="@+id/editprofile_city"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:autofillHints="@string/city"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/city"
                android:inputType="textShortMessage"
                android:maxLength="32"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                card_view:layout_constraintBottom_toBottomOf="@+id/editprofile_postalcode"
                card_view:layout_constraintEnd_toEndOf="@+id/editprofile_doorphone"
                card_view:layout_constraintStart_toEndOf="@+id/editprofile_postalcode"
                card_view:layout_constraintTop_toTopOf="@+id/editprofile_postalcode" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/description"

                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editprofile_description_image"
                android:layout_width="25dp"
                android:layout_height="45dp"
                android:layout_gravity="top"
                android:layout_margin="6dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/description"
                app:srcCompat="@drawable/ic_description"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/editprofile_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/description"
                android:gravity="center_vertical"
                android:hint="@string/description"
                android:inputType="textMultiLine|textImeMultiLine|textLongMessage"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.51"
                card_view:layout_constraintStart_toEndOf="@+id/editprofile_description_image"
                card_view:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/openinghours_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:hint="@string/description"
                android:inputType="textMultiLine|textImeMultiLine|textLongMessage"
                android:text="@string/opening_hours_full"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/opening_hours"
                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>