<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/inputpssw_toolbar"
        style="@style/AppTheme.ToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="@color/colorTextIcon" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/Widget.MaterialComponents.CardView"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/old_pssw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/current_pssw"
                android:padding="8dp"
                android:maxLength="46"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/Widget.MaterialComponents.CardView"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/new_pssw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/new_pssw"
                android:padding="8dp"
                android:maxLength="46"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/Widget.MaterialComponents.CardView"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/new_pssw1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/repeat_new_pssw"
                android:padding="8dp"
                android:maxLength="46"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText"/>

        </androidx.cardview.widget.CardView>


</LinearLayout>